--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Playfair+Display:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Playfair+Display:ital,wght@1,500&display=swap"
       rel="stylesheet"
     />
     <script
@@ -28,5 +28,76 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body></body>
+  <body>
+    <div class="hero">
+      <p>👋 Hello, I am</p>
+      <h1>Oksana Opanasenko</h1>
+      <h2>Front-end Developer from Ukraine, based in Sydney, Australia</h2>
+      <a href="#" class="btn btn-branding">Contact me</a>
+    </div>
+    <p class="text-center m-5">
+      Featured Project which my best projects be choice to show
+    </p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <div class="project-image">
+            <img
+              src="images/Australia animals.png"
+              class="img-fluid rounded"
+              alt="Australian animals Project"
+              width="560"
+            />
+          </div>
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-3">Australian animals Project</h2>
+            <p class="mb-3 mb-lg-5 text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a
+              href="https://kaleidoscopic-starburst-58f8a9.netlify.app/"
+              target="_blank"
+              class="btn btn-branding-outline"
+              >Learn more</a
+            >
+          </div>
+        </div>
+      </div>
+
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-3">Weather App</h2>
+            <p class="mb-3 mb-lg-5 text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a
+              href="https://papaya-tulumba-9b52c3.netlify.app/"
+              target="_blank"
+              class="btn btn-branding-outline"
+              >Learn more</a
+            >
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <div class="project-image">
+            <img
+              src="images/Weather.png"
+              class="img-fluid rounded"
+              alt="Weather"
+              width="560"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
