--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
           <div class="project-description">
             <h2 class="mb-3">Australian animals Project</h2>
             <p class="mb-3 mb-lg-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              My first project was created using HTML and CSS in Visual Studio
+              Code. It was the beginning of my exciting journey as a front-end
+              developer. This is a simple page that also uses Java Script for
+              user interaction.
             </p>
             <a
               href="https://kaleidoscopic-starburst-58f8a9.netlify.app/"
@@ -74,10 +74,11 @@
           <div class="project-description">
             <h2 class="mb-3">Weather App</h2>
             <p class="mb-3 mb-lg-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              This interactive weather App was created in Visual Studio Code .
+              For its development I used HTML, CSS and Java Script and also
+              knowledge about API, etc. The application presents real-time
+              weather data and forecast for the next 5 days for any city in the
+              world.
             </p>
             <a
               href="https://papaya-tulumba-9b52c3.netlify.app/"
