--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="description" content="" />
+    <title>Front-end developer - Oksana Opanasenko</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -29,11 +30,28 @@
     ></script>
   </head>
   <body>
-    <div class="hero">
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage">
+          <img src="images/logo.png" class="logo" alt="Oksana logo" />
+        </a>
+        <ul>
+          <li class="active"><a href="/" title="Homepage">Home</a></li>
+          <li>
+            <a href="/about.html" title="About Oksana">About</a>
+          </li>
+          <li><a href="/work.html" title="Oksana's work">Work</a></li>
+          <li><a href="/contact.html" title="Contact Oksana">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="hero mt-0 mb-5">
       <p>👋 Hello, I am</p>
       <h1>Oksana Opanasenko</h1>
       <h2>Front-end Developer from Ukraine, based in Sydney, Australia</h2>
-      <a href="#" class="btn btn-branding">Contact me</a>
+      <a href="/contact.html" class="btn btn-branding" title="Contact Oksana"
+        >Contact me</a
+      >
     </div>
 
     <div class="container">
@@ -60,6 +78,7 @@
             <a
               href="https://kaleidoscopic-starburst-58f8a9.netlify.app/"
               target="_blank"
+              title="Go to Australian animals Project"
               class="btn btn-branding-outline"
               >Learn more</a
             >
@@ -81,6 +100,7 @@
             <a
               href="https://papaya-tulumba-9b52c3.netlify.app/"
               target="_blank"
+              title="Go to Weather App"
               class="btn btn-branding-outline"
               >Learn more</a
             >
@@ -91,12 +111,68 @@
             <img
               src="images/Weather.png"
               class="img-fluid rounded"
-              alt="Weather"
+              alt="Weather app"
               width="560"
             />
           </div>
         </div>
       </div>
+      <footer>
+        <div class="contact-box d-none d-md-flex justify-content-between mb-5">
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">
+              Let’s work together and I’ll help you by all my best
+            </p>
+          </div>
+          <div>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-3"
+              title="contact Patricia"
+              >Get in touch</a
+            >
+          </div>
+        </div>
+        <div class="d-flex justify-content-center">
+          <a
+            href="mailto:oksana@gmail.com"
+            class="email-link mb-3"
+            title="Email Patricia"
+            >opanasenko2084@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a
+            href="https://www.facebook.com/oksana.opanasenko.3/"
+            target="_blank"
+            title="Facebook profile"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+          <a
+            href="https://www.instagram.com/oksanka_opa/"
+            target="_blank"
+            title="Instagram profile"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a
+            href="https://github.com/oksankaopa"
+            target="_blank"
+            title="Github profile"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </div>
+        <p class="text-center mt-5 code">
+          ✌ This project was coded by Oksana Opanasenko and it is
+          <a
+            href="https://github.com/oksankaopa/My-portfolio"
+            class="code-link"
+            title="Github link"
+            target="_blank"
+            >open-sourced</a
+          >
+        </p>
+      </footer>
     </div>
   </body>
 </html>
