--- a/about.html
+++ b/about.html
@@ -48,9 +48,16 @@
 
     <div class="content-conteiner container">
       <div class="row">
+        <div class="col-lg-6 d-block d-md-none">
+          <img
+            src="images/Oksana 1.jpg"
+            alt="Oksana"
+            class="img-fluid about-img mt-3"
+          />
+        </div>
         <div class="col-lg-6">
           <div class="content">
-            <h1 class="mb-5">Hi I am Oksana Opanasenko</h1>
+            <h1 class="mb-md-5">Hi I am Oksana Opanasenko</h1>
             <h2 class="mb-4">Front-end Developer, based in Portugal.</h2>
             <p class="text-muted mb-5">
               For anyone who wants to start learning code, this workshop is very
@@ -61,7 +68,7 @@
             <a href="work.html" class="btn btn-branding">See my projects</a>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-6 d-none d-md-block">
           <img
             src="images/Oksana 1.jpg"
             alt="Oksana"
