--- a/work.html
+++ b/work.html
@@ -37,24 +37,51 @@
         </a>
         <ul>
           <li><a href="/" title="Homepage">Home</a></li>
-          <li >
+          <li>
             <a href="/about.html" title="About Oksana">About</a>
           </li>
-          <li class="active"><a href="/work.html" title="Oksana's work">Work</a></li>
+          <li class="active">
+            <a href="/work.html" title="Oksana's work">Work</a>
+          </li>
           <li><a href="/contact.html" title="Contact Oksana">Contact</a></li>
         </ul>
       </nav>
-    </div> <h3 class="mb-5"> My SheCodes Certificates</h3>
-    <div class="container d-flex justify-content-between">
-       
-        <div>
-            <img src="/images/Basic certificate.png" class="Certificate" alt="">
-        </div>
-<div>
-    <img src="/images/Plus certificate.png" class="Certificate" alt="">
-</div>
     </div>
-    <footer class="mt-5">
+
+    <div class="content-conteiner container">
+      <div class="content">
+        <h1 class="mb-5">Take a look at what I've been working on!</h1>
+        <div class="row">
+          <div class="col-md-6 mb-5">
+            <img
+              src="images/Australia animals.png"
+              alt="Australian animals project preview"
+              class="img-fluid about-img"
+            />
+            <h3 class="text-center">Australian animals Project</h3>
+            <p class="text-center text-muted">Frontend Developer</p>
+          </div>
+          <div class="col-md-6 mb-5">
+            <img
+              src="images/weather.png"
+              alt="Weather app preview"
+              class="img-fluid about-img"
+            />
+            <h3 class="text-center">Weather App</h3>
+            <p class="text-center text-muted">Frontend Developer</p>
+          </div>
+        </div>
+      </div>
+      <h3 class="mb-5">My SheCodes Certificates</h3>
+      <div class="container d-flex justify-content-between">
+        <div>
+          <img src="/images/Basic certificate.png" class="Certificate" alt="" />
+        </div>
+        <div>
+          <img src="/images/Plus certificate.png" class="Certificate" alt="" />
+        </div>
+      </div>
+      <footer class="mt-5">
         <div class="contact-box d-none d-md-flex justify-content-between mb-5">
           <div>
             <h4>Work Inquiry</h4>
