--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
         <div class="col-lg-6">
           <div class="content">
             <h1 class="mb-md-5">Hi I am Oksana Opanasenko</h1>
-            <h2 class="mb-4">Front-end Developer, based in Portugal.</h2>
+            <h2 class="mb-4">Front-end Developer, based in Australia.</h2>
             <p class="text-muted mb-5">
               For anyone who wants to start learning code, this workshop is very
               interesting. You will be challenged with different exercises, and
