--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <title>Front-end developer - Oksana Opanasenko</title>
+    <meta name="description" content="Learn more about Oksana Opanasenko" />
+    <title>About Oksana Opanasenko</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -89,7 +89,7 @@
             <a
               href="/contact.html"
               class="btn btn-branding mt-3"
-              title="contact Patricia"
+              title="contact Oksana"
               >Get in touch</a
             >
           </div>
@@ -98,7 +98,7 @@
           <a
             href="mailto:oksana@gmail.com"
             class="email-link mb-3"
-            title="Email Patricia"
+            title="Email Oksana"
             >opanasenko2084@gmail.com</a
           >
         </div>
