--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <title>Front-end developer - Oksana Opanasenko</title>
+    <meta name="description" content="Contact Oksana If you have any questions" />
+    <title>Contact Oksana Opanasenko</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -50,15 +50,10 @@
       </nav>
     </div>
     <div class="content-conteiner container">
-      <div class="row">
-        <div class="col-lg-6 d-block d-md-none">
-          <img
-            src="images/Oksana 1.jpg"
-            alt="Oksana"
-            class="img-fluid about-img mt-3"
-          />
+      <div class="contact-greeting">
+            <h1 class="mb-md-5 ">Let's get in touch!</h1>
         </div>
-        <h1 class="mb-md-5 text-start">Let's get in touch!</h1>
+        <div class="row">     
         <div class="col-lg-5">
           <div class="contact-content">
             <p class="text-muted mb-5 d-none d-md-block">
