--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
+    <meta
+      name="description"
+      content="This site is about future front-end devoloper Oksana Opanasenko"
+    />
     <title>Front-end developer - Oksana Opanasenko</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -129,7 +132,7 @@
             <a
               href="/contact.html"
               class="btn btn-branding mt-3"
-              title="contact Patricia"
+              title="contact Oksana"
               >Get in touch</a
             >
           </div>
@@ -138,7 +141,7 @@
           <a
             href="mailto:oksana@gmail.com"
             class="email-link mb-3"
-            title="Email Patricia"
+            title="Email Oksana"
             >opanasenko2084@gmail.com</a
           >
         </div>
