--- a/work.html
+++ b/work.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <title>Front-end developer - Oksana Opanasenko</title>
+    <meta
+      name="description"
+      content="Learn more about projecrs and apps developed by Oksana Opanasenko"
+    />
+    <title>Works of Oksana Opanasenko</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -50,7 +53,9 @@
 
     <div class="content-conteiner container">
       <div class="content">
-        <h1 class="mb-5">Take a look at what I've been working on!</h1>
+        <h1 class="mb-5 content-heading">
+          Take a look at what I've been working on!
+        </h1>
         <div class="row">
           <div class="col-md-6 mb-5">
             <img
@@ -93,7 +98,7 @@
             <a
               href="/contact.html"
               class="btn btn-branding mt-3"
-              title="contact Patricia"
+              title="contact Oksana"
               >Get in touch</a
             >
           </div>
@@ -102,7 +107,7 @@
           <a
             href="mailto:oksana@gmail.com"
             class="email-link mb-3"
-            title="Email Patricia"
+            title="Email Oksana"
             >opanasenko2084@gmail.com</a
           >
         </div>
