improve responsive contact and add responsive workshop certifikate

--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,33 @@
         </div>
       </div>
       <footer class="mt-5">
-       
+       <div class="social-links d-flex d-md-none justify-content-center">
+          <a
+            href="https://www.linkedin.com/in/oksana-opanasenko-96711bbb/"
+            target="_blank"
+            title="Linkidin profile"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a> 
+                    <a
+            href="https://github.com/oksankaopa"
+            target="_blank"
+            title="Github profile"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/oksana.opanasenko.3/"
+            target="_blank"
+            title="Facebook profile"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+          <a
+            href="https://www.instagram.com/oksanka_opa/"
+            target="_blank"
+            title="Instagram profile"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+
+        </div>
         <p class="text-center mt-5 code">
           ✌ This project was coded by Oksana Opanasenko and it is
           <a
