--- a/work.html
+++ b/work.html
@@ -85,6 +85,9 @@
         <div>
           <img src="/images/Plus certificate.png" class="Certificate" alt="" />
         </div>
+        <div>
+          <img src="/images/Rasponsive.png" class="Certificate" alt="" />
+        </div>
       </div>
       <footer class="mt-5">
         <div class="contact-box d-none d-md-flex justify-content-between mb-5">
